[gd_scene load_steps=6 format=3 uid="uid://dx34icfhssjib"]

[ext_resource type="Script" path="res://scripts/mid_menu.gd" id="1_6mcj1"]
[ext_resource type="Texture2D" uid="uid://ck2a4pkkwc1uk" path="res://images/Brown.png" id="2_hqvdm"]
[ext_resource type="Texture2D" uid="uid://v581piq4e5rm" path="res://images/logo.png" id="3_vkarn"]
[ext_resource type="AudioStream" uid="uid://b54a0hwybv5gv" path="res://audio/dog-bark.mp3" id="4_8i3wv"]
[ext_resource type="AudioStream" uid="uid://dnbw7butr5rwn" path="res://audio/dog_theme.mp3" id="5_utpda"]

[node name="MidMenu" type="Node"]
script = ExtResource("1_6mcj1")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hqvdm")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -158.0
offset_right = 424.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vkarn")

[node name="dog_bark" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8i3wv")
pitch_scale = 0.92

[node name="main_theme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_utpda")
autoplay = true

[node name="Main Menu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 101.0
offset_right = 47.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Next Level" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 6.0
offset_right = 43.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 30
text = "Next Level"

[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Next Level" to="." method="_on_next_level_pressed"]
